[package]
name = "tree-sitter-martian"
description = "martian grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "martian"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/LoganAMorrison/tree-sitter-martian"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.24.4"

[build-dependencies]
cc = "1.0"
